--- a/hw2/app/index.html
+++ b/hw2/app/index.html
@@ -17,7 +17,7 @@
 
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="bower_components/seiyria-bootstrap-slider/css/bootstrap-slider.css" />
+    <link rel="stylesheet" href="styles/bootstrap-slider.css">
     <!-- endbuild -->
   </head>
   <body>
