Fix css path to slider and alias for controllers

--- a/hw2/app/index.html
+++ b/hw2/app/index.html
@@ -13,11 +13,11 @@
     <link rel="stylesheet" href="bower_components/bootstrap-datepicker/css/datepicker.css" />
     <link rel="stylesheet" href="bower_components/bootstrap-datepicker/css/datepicker3.css" />
     <!-- endbower -->
+    <link rel="stylesheet" href="bower_components/seiyria-bootstrap-slider/css/bootstrap-slider.css">
     <!-- endbuild -->
 
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="styles/bootstrap-slider.css">
     <!-- endbuild -->
   </head>
   <body>
